tests/NormalTests/paczka1/fuzzy1/53318371.err
Error in line 21: v2iTpP6sZ S742 83,5
Error in line 22: RzfrPaEx A522 88,2
Error in line 25: h8vstVd S697 21,9
Error in line 30: gUggQZUXoG A522 19,3
Error in line 37: S742 S697 55,8
